--- a/index.html
+++ b/index.html
@@ -562,14 +562,14 @@ body, #sidebar, #basemap-switcher {
 }
 .popup-container {
   position: relative;
-  padding-bottom: 4px;
+  padding-top: 6px;
 }
 .edit-popup {
   min-width: 300px;
 }
 .popup-edit-btn {
   position: absolute;
-  bottom: 0;
+  top: 0;
   right: 0;
 }
 .popup-route-actions {
@@ -581,15 +581,17 @@ body, #sidebar, #basemap-switcher {
 .popup-route-btn,
 .popup-direct-route-btn {
   flex: 1;
-}
-
-.popup-direct-route-btn {
   background: #2b2b2b;
   border: 1px solid #444;
   border-radius: 4px;
   color: #f0f0f0;
   cursor: pointer;
-  padding: 6px 8px;
+  font-size: 12px;
+  padding: 4px 6px;
+}
+
+.popup-direct-route-btn {
+  font-weight: 600;
 }
 .popup-photo {
   width: 100%;
