Update source name from 'Pinterest Diane G' to 'Pinterest_Diane_G'

--- a/migracjawarstw/kolpintertopinezki2.html
+++ b/migracjawarstw/kolpintertopinezki2.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>ExploRide – Kopiuj Pinterest Diane G → pinezki2</title>
+  <title>ExploRide – Kopiuj Pinterest_Diane_G → pinezki2</title>
   <style>
     :root { color-scheme: dark; }
     body { font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; margin:0; padding:16px; background:#0b0e14; color:#e6e6e6;}
@@ -18,10 +18,10 @@
   </style>
 </head>
 <body>
-  <h1>ExploRide – Kopiuj „Pinterest Diane G” → „pinezki2”</h1>
+  <h1>ExploRide – Kopiuj „Pinterest_Diane_G” → „pinezki2”</h1>
 
   <div class="card small">
-    <div><b>Źródło:</b> <span class="mono">Pinterest Diane G</span></div>
+    <div><b>Źródło:</b> <span class="mono">Pinterest_Diane_G</span></div>
     <div><b>Cel:</b> <span class="mono">pinezki2</span></div>
     <div><b>Ustaw w kopii:</b> <span class="mono">warstwa = "FunJoFgC9DGvmQMjtnlS"</span></div>
     <div style="margin-top:8px;">
@@ -67,7 +67,7 @@
   };
 
   // === USTAWIENIA AKCJI ===
-  const SOURCE_COL = "Pinterest Diane G";
+  const SOURCE_COL = "Pinterest_Diane_G";
   const TARGET_COL = "pinezki2";
   const TARGET_LAYER_ID = "FunJoFgC9DGvmQMjtnlS";
   const LAYER_FIELD = "warstwa";
